<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="6dp"
    android:id="@+id/list_item_back">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/styleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/titleAddition" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EAF7C0" />


    <ListView
        android:id="@+id/listViewExamples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="12dp"
        android:scrollbars="none" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EAF7C0" />


    <TextView
        android:id="@+id/textViewCalculate"
        style="@style/styleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/Addition1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Num1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/zero"
            android:inputType="number"
            android:textSize="24sp"
            android:windowSoftInputMode="adjustPan"
            />

        <TextView
            android:id="@+id/textViewSign"
            style="@style/styleText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/AdditionMark"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/Num2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/zero"
            android:inputType="number"
            android:textSize="24sp" />

        <TextView

            style="@style/styleText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/equal"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/zero"
            android:textSize="24sp" />


    </LinearLayout>


    <Button
        android:id="@+id/buttonResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#fffbbf"
        android:onClick="result"
        android:text="@string/result"
        android:textAppearance="@android:style/TextAppearance" />

</LinearLayout>